--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 beautifulsoup4==4.7.1
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
 colorama==0.4.1
 idna==2.8
 lxml==4.3.4
+mypy==0.711
+mypy-extensions==0.4.1
 requests==2.22.0
 schedule==0.6.0
-soupsieve==1.9.1
+soupsieve==1.9.2
+typed-ast==1.4.0
 urllib3==1.25.3
